Score and score level are kinda functional

--- a/Mice in the Hice/Mice in the Hice/FormHouse.resx
+++ b/Mice in the Hice/Mice in the Hice/FormHouse.resx
@@ -683,4 +683,10 @@
         l4n+dkBg4TKWsYx/LggsXMYylvHPBYGFy1jGMv6ZAO7/ByKM9uZA+2OCAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="tmrMice.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>395, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>81</value>
+  </metadata>
 </root>
