--- a/Mice in the Hice/Mice in the Hice/Properties/Resources.resx
+++ b/Mice in the Hice/Mice in the Hice/Properties/Resources.resx
@@ -274,4 +274,7 @@
   <data name="titlescreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\titlescreen.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="deathscreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\deathscreen.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
