--- a/Mice in the Hice/Mice in the Hice/Properties/Resources.resx
+++ b/Mice in the Hice/Mice in the Hice/Properties/Resources.resx
@@ -121,20 +121,11 @@
   <data name="BigMouse1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\BigMouse1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="exit" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\exit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="help" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\help.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="logosmall" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\logosmall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="lore" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\lore.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="menulogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\menulogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -150,9 +141,6 @@
   </data>
   <data name="Mice_in_the_Hice_exe" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Mice in the Hice.exe.config;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="play" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\play.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Sparkles1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Sparkles1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -276,5 +264,8 @@
   </data>
   <data name="deathscreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\deathscreen.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="menu_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\menu button.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
