--- a/Mice in the Hice/Mice in the Hice/Properties/Resources.resx
+++ b/Mice in the Hice/Mice in the Hice/Properties/Resources.resx
@@ -118,12 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="BigMouse1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\BigMouse1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="logosmall" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\logosmall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -141,9 +135,6 @@
   </data>
   <data name="Mice_in_the_Hice_exe" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Mice in the Hice.exe.config;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="Sparkles1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\Sparkles1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="sprite_buff1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\sprite_buff1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -259,13 +250,10 @@
   <data name="sprite_rug7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\sprite_rug7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="titlescreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\titlescreen.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="deathscreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\deathscreen.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="menu_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\menu button.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="deadmice" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\deadmice.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
